Work in progress

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -636,10 +636,10 @@
         "distort": "Distort",
         "dockIcon": "Dock Icon",
         "done": "Done",
-        "doubleTap": "Double Tap",
         "doubleClick": "Double Click",
         "doubleClickPressAction": "Double Click Press Action",
         "doubleClickReleaseAction": "Double Click Release Action",
+        "doubleTap": "Double Tap",
         "down": "Down",
         "downloadAudioSwift": "Download AudioSwift",
         "downloadTangentHub": "Download Tangent Hub",
@@ -677,7 +677,6 @@
         "enableiMessageNotifications": "Enable iMessage Notifications",
         "enableLoupdeckSupport": "Enable Loupedeck Support",
         "enableLoupedeckCTSupport": "Enable Loupedeck CT Support",
-        "enableTourBoxSupport": "Enable TourBox Support",
         "enableLoupedeckCTSupportQuitLoupedeckApp": "Enable Loupedeck CT Support & Quit Loupedeck App",
         "enableLoupedeckPlusSupport": "Enable Loupedeck+ Support",
         "enableLoupedeckPlusSupportQuitLoupedeckApp": "Enable Loupedeck+ Support & Quit Loupedeck App",
@@ -693,6 +692,7 @@
         "enableShortcutsDuringFullscreen": "Enable Shortcuts During Fullscreen Playback",
         "enableStreamDeck": "Enable Stream Deck Support",
         "enableTangentPanelSupport": "Enable Tangent Panel Support",
+        "enableTourBoxSupport": "Enable TourBox Support",
         "enableViewerContextualMenu": "Enable Viewer Contextual Menu",
         "enableVirtualTouchBar": "Enable Virtual Touch Bar",
         "enableWaveformDrawing": "Enable Waveform Drawing",
@@ -1207,7 +1207,6 @@
         "loudness9": "Loudness",
         "loupedeck": "Loupedeck",
         "loupedeckAppTip": "The official Loupedeck application is not compatible with CommandPost and can't be used at the same time.",
-        "tourBoxAppTip": "The official TourBox application is not compatible with CommandPost and can't be used at the same time.",
         "loupedeckBankDescription": "Changes the Loupedeck Bank",
         "loupedeckCT": "Loupedeck CT",
         "loupedeckCTBankDescription": "Changes the Loupedeck CT Bank",
@@ -1390,6 +1389,8 @@
         "overrideValueInvalid": "The value you entered is not valid.\n\nPlease try again.",
         "overwriteToPrimaryStoryline": "Overwrite to Primary Storyline",
         "padding": "Padding",
+        "pageOne": "Page One",
+        "pageTwo": "Page Two",
         "pan": "Pan",
         "paste": "Paste",
         "pasteboard": "Pasteboard",
@@ -1488,7 +1489,15 @@
         "presets": "Presets",
         "press": "Press",
         "pressAction": "Press Action",
+        "pressActionDownModifier": "Press Action (Down Modifier)",
+        "pressActionLeftModifier": "Press Action (Left Modifier)",
+        "pressActionRightModifier": "Press Action (Right Modifier)",
         "pressActions": "Press Actions",
+        "pressActionShortModifier": "Press Action (Short Modifier)",
+        "pressActionSideModifier": "Press Action (Side Modifier)",
+        "pressActionTallModifier": "Press Action (Tall Modifier)",
+        "pressActionTopModifier": "Press Action (Top Modifier)",
+        "pressActionUpModifier": "Press Action (Up Modifier)",
         "pressAndHold": "Press and hold",
         "pressBottomLeft": "Press Bottom Left",
         "pressBottomMiddle": "Press Bottom Middle",
@@ -1528,6 +1537,14 @@
         "relativeA": "Relative A",
         "release": "Release",
         "releaseAction": "Release Action",
+        "releaseActionDownModifier": "Release Action (Down Modifier)",
+        "releaseActionLeftModifier": "Release Action (Left Modifier)",
+        "releaseActionRightModifier": "Release Action (Right Modifier)",
+        "releaseActionShortModifier": "Release Action (Short Modifier)",
+        "releaseActionSideModifier": "Release Action (Side Modifier)",
+        "releaseActionTallModifier": "Release Action (Tall Modifier)",
+        "releaseActionTopModifier": "Release Action (Top Modifier)",
+        "releaseActionUpModifier": "Release Action (Up Modifier)",
         "reload": "Reload",
         "rememberLastQuery": "Remember Last Query",
         "removeFavouriteKeyword": "Remove Favourite Keyword",
@@ -1536,6 +1553,7 @@
         "renameButtonQuestion": "What would you like to rename this button to?",
         "renameClip": "Rename Clip",
         "renderComplete": "Render Complete!",
+        "repeat": "Repeat",
         "repeatPressActionUntilReleased": "Repeat Press Action Until Released",
         "replace": "Replace",
         "replaceAll": "Replace All",
@@ -1912,6 +1930,10 @@
         "touchBarSetupTip": "Make sure \"App Controls with Control Strip\" is selected within the \"Touch Bar shows\" Keyboard System Preferences to see the CommandPost icon.<br />You can then tap this icon to toggle through the different Touch Bar groups.",
         "touchBarWidget": "Touch Bar Widget",
         "tourBox": "TourBox",
+        "tourBoxAppTip": "The official TourBox application is not compatible with CommandPost and can't be used at the same time.",
+        "tourBoxResetAllConfirmation": "This will reset all TourBox items across all applications to the default values.",
+        "tourBoxResetApplicationConfirmation": "This will reset all TourBox items in the current application to the default values.",
+        "tourBoxResetBankConfirmation": "This will reset all TourBox items in the current bank to the default values.",
         "transform": "Transform",
         "transition": "Transition",
         "transition_group": "Transition",
@@ -1925,8 +1947,25 @@
         "trimToPlayhead": "Trim To Playhead",
         "trimWhitespace": "Trim whitespace",
         "turnLeftAction": "Turn Left Action",
+        "turnLeftActionDownModifier": "Turn Left Action (Down Modifier)",
+        "turnLeftActionLeftModifier": "Turn Left Action (Left Modifier)",
+        "turnLeftActionRightModifier": "Turn Left Action (Right Modifier)",
+        "turnLeftActionShortModifier": "Turn Left Action (Short Modifier)",
+        "turnLeftActionSideModifier": "Turn Left Action (Side Modifier)",
+        "turnLeftActionTallModifier": "Turn Left Action (Tall Modifier)",
+        "turnLeftActionTopModifier": "Turn Left Action (Top Modifier)",
+        "turnLeftActionUpModifier": "Turn Left Action (Up Modifier)",
         "turnLeftDownAction": "Turn Left/Down Action",
         "turnRightAction": "Turn Right Action",
+        "turnRightActionDownModifier": "Turn Right Action (Down Modifier)",
+        "turnRightActionLeftModifier": "Turn Right Action (Left Modifier)",
+        "turnRightActionRightModifier": "Turn Right Action (Right Modifier)",
+        "turnRightActionShortModifier": "Turn Right Action (Short Modifier)",
+        "turnRightActionSideModifier": "Turn Right Action (Side Modifier)",
+        "turnRightActionTallModifier": "Turn Right Action (Tall Modifier)",
+        "turnRightActionTopModifier": "Turn Right Action (Top Modifier)",
+        "tourBoxRequirementsTip": "These features are compatible with the firmware that's bundled with TourBox Console Version 2.1.",
+        "turnRightActionUpModifier": "Turn Right Action (Up Modifier)",
         "turnRightUpAction": "Turn Right/Up Action",
         "two": "2",
         "twoFingerTap": "Two Finger Tap",
