--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -627,6 +627,8 @@
         "disableLoupedeckPlusSupportAndLaunchLoupedeckApp": "Disable Loupedeck+ Support & Launch Loupedeck App",
         "disableLoupedeckSupport": "Disable Loupedeck Support",
         "disableLoupedeckSupportAndLaunchLoupedeckApp": "Disable Loupedeck Support & Launch Loupedeck App",
+        "disableTourBoxAndLaunchTourBoxConsole": "Disable TourBox Support & Launch TourBox Console",
+        "disableTourBoxSupport": "Disable TourBox Support",
         "diskutility_application_manager_label": "Application Manager",
         "display": "Display",
         "displayMessageWhenChangingBanks": "Display Message When Changing Banks",
@@ -693,6 +695,7 @@
         "enableStreamDeck": "Enable Stream Deck Support",
         "enableTangentPanelSupport": "Enable Tangent Panel Support",
         "enableTourBoxSupport": "Enable TourBox Support",
+        "enableTourBoxSupportQuitTourBoxConsole": "Enable TourBox Support & Quit TourBox Console",
         "enableViewerContextualMenu": "Enable Viewer Contextual Menu",
         "enableVirtualTouchBar": "Enable Virtual Touch Bar",
         "enableWaveformDrawing": "Enable Waveform Drawing",
@@ -1021,6 +1024,8 @@
         "global_snippets_action": "Snippets",
         "global_streamDeckbanks_action": "Stream Deck Banks",
         "global_touchbarbanks_action": "Touch Bar Banks",
+        "global_tourbox_applications_action": "TourBox Applications",
+        "global_tourbox_banks_action": "TourBox Banks",
         "global_widgets_action": "Global Touch Bar Widgets",
         "glow": "Glow",
         "goTo": "Go to",
@@ -1851,6 +1856,7 @@
         "switchBetweenInsideOutsideMarks": "Switch Between Inside/Outside Masks",
         "switchingTo": "Switching to",
         "switchLoupedeckCTTo": "Switch Loupedeck CT to",
+        "switchTourBoxTo": "Switch TourBox to",
         "systempreferences_application_manager_label": "Application Manager",
         "tag": "Tag",
         "tangent": "Tangent",
@@ -1905,6 +1911,7 @@
         "toggleEffects": "Toggle Effects",
         "toggleOverlaysWithCapsLock": "Toggle Overlays with Caps Lock",
         "togglePlayerBackground": "Toggle Player Background",
+        "toggleTourBoxSupport": "Toggle TourBox Support",
         "toggleVideoScopesInEventViewer": "Toggle Video Scopes in Event Viewer",
         "toggleVideoScopesInViewer": "Toggle Video Scopes in Viewer",
         "toolbox": "Toolbox",
@@ -1931,6 +1938,8 @@
         "touchBarWidget": "Touch Bar Widget",
         "tourBox": "TourBox",
         "tourBoxAppTip": "The official TourBox application is not compatible with CommandPost and can't be used at the same time.",
+        "tourBoxBankDescription": "Changes the TourBox Bank",
+        "tourBoxRequirementsTip": "These features are compatible with the firmware that's bundled with TourBox Console Version 2.1.",
         "tourBoxResetAllConfirmation": "This will reset all TourBox items across all applications to the default values.",
         "tourBoxResetApplicationConfirmation": "This will reset all TourBox items in the current application to the default values.",
         "tourBoxResetBankConfirmation": "This will reset all TourBox items in the current bank to the default values.",
@@ -1964,7 +1973,6 @@
         "turnRightActionSideModifier": "Turn Right Action (Side Modifier)",
         "turnRightActionTallModifier": "Turn Right Action (Tall Modifier)",
         "turnRightActionTopModifier": "Turn Right Action (Top Modifier)",
-        "tourBoxRequirementsTip": "These features are compatible with the firmware that's bundled with TourBox Console Version 2.1.",
         "turnRightActionUpModifier": "Turn Right Action (Up Modifier)",
         "turnRightUpAction": "Turn Right/Up Action",
         "two": "2",
