--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -33,7 +33,6 @@
         "afterEffects": "After Effects",
         "aftereffects_application_manager_label": "Application Manager",
         "aftereffects_command_group": "After Effects",
-        "aftereffects_console_label": "Console",
         "aftereffects_effects_action": "Effects",
         "aftereffects_effects_label": "Effects",
         "aftereffects_group": "After Effects",
@@ -1039,6 +1038,7 @@
         "global_scripts_action": "AppleScript",
         "global_shortcuts_action": "Keyboard Shortcuts",
         "global_snippets_action": "Snippets",
+        "menuItemsLoading": "The menu items will populate once the selected application is opened and scanned.",
         "global_streamDeckbanks_action": "Stream Deck Banks",
         "global_touchbarbanks_action": "Touch Bar Banks",
         "global_tourbox_applications_action": "TourBox Applications",
@@ -1816,9 +1816,11 @@
         "skip": "Skip",
         "skype_application_manager_label": "Application Manager",
         "skype_command_group": "Skype",
-        "skype_console_label": "Search Console",
+        "zoom_command_group": "Zoom",
         "skype_shortcuts_action": "Shortcuts",
         "skype_shortcuts_label": "Shortcuts",
+        "zoom_shortcuts_action": "Shortcuts",
+        "zoom_shortcuts_label": "Shortcuts",
         "skypeShortcutDescription": "Triggers a shortcut key within Skype.",
         "slideActions": "Slide Actions",
         "slideDownAction": "Slide Down Action",
