Added option to create Captions when doing Text To Speech
- Updated `hs._asm.cfpreferences` from 0.1.1-coroutineFriendly to 0.1.2.
- Text To Speech now correctly assigns an audio role
- Closes #1145

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -16,6 +16,7 @@
         "add": "Add",
         "add9": "Add",
         "addApplication": "Add Application",
+        "addCaption": "Add Caption",
         "addColorBoardEffect": "Add Color Board Effect",
         "addColorCurvesEffect": "Add Color Curves Effect",
         "addColorWheelsEffect": "Add Color Wheels Effect",
@@ -1038,7 +1039,6 @@
         "global_scripts_action": "AppleScript",
         "global_shortcuts_action": "Keyboard Shortcuts",
         "global_snippets_action": "Snippets",
-        "menuItemsLoading": "The menu items will populate once the selected application is opened and scanned.",
         "global_streamDeckbanks_action": "Stream Deck Banks",
         "global_touchbarbanks_action": "Touch Bar Banks",
         "global_tourbox_applications_action": "TourBox Applications",
@@ -1264,6 +1264,7 @@
         "menubarPanelLabel": "Menubar",
         "menubarPanelTooltip": "Menubar Preferences",
         "menuChoiceSubText": "Menu: %{path}",
+        "menuItemsLoading": "The menu items will populate once the selected application is opened and scanned.",
         "merge": "Merge",
         "method": "Method",
         "methods": "Methods",
@@ -1816,11 +1817,8 @@
         "skip": "Skip",
         "skype_application_manager_label": "Application Manager",
         "skype_command_group": "Skype",
-        "zoom_command_group": "Zoom",
         "skype_shortcuts_action": "Shortcuts",
         "skype_shortcuts_label": "Shortcuts",
-        "zoom_shortcuts_action": "Shortcuts",
-        "zoom_shortcuts_label": "Shortcuts",
         "skypeShortcutDescription": "Triggers a shortcut key within Skype.",
         "slideActions": "Slide Actions",
         "slideDownAction": "Slide Down Action",
@@ -2094,6 +2092,9 @@
         "youCannotDragItemsBetweenDifferentControlTypesDescription": "Currently you can only drag items of the same control type (i.e. button to button, or knob to knob). Please try again.",
         "zoom": "Zoom",
         "zoom_application_manager_label": "Application Manager",
+        "zoom_command_group": "Zoom",
+        "zoom_shortcuts_action": "Shortcuts",
+        "zoom_shortcuts_label": "Shortcuts",
         "zoomSlider": "Zoom Slider",
         "zoomSliderDescription": "Allows you to control timeline zoom.",
         "zoomToFit": "Zoom to Fit",
