Disabled features no longer available in FCPX 10.4.9
- “Show Hidden FCPXML Import/Export Options” no longer works in 10.4.9
- “Show Timeline in Viewers” no longer works in 10.4.9
- Updated the Media Import Menubar items so that they just toggle the
preferences rather than use GUI scripting.
- Fixed bug when sending to Compressor in Final Cut Pro 10.4.9 using
Timeline Batch Export.
- Closes #2455
- Closes #2436
- Closes #2450

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -232,6 +232,7 @@
         "clearLog": "Clear Log",
         "clearPasteboardHistory": "Clear Pasteboard History",
         "clearPluginCache": "Clear Plugin Cache",
+        "scanMotionTemplates": "Scan Motion Templates",
         "clearSharedPasteboard": "Clear Shared Pasteboard",
         "cliInstallError": "I'm sorry, but we failed to Install the Command Line Tool. Please try again.",
         "clip": "Clip",
@@ -256,6 +257,7 @@
         "colorBoardCouldNotBeActivated": "The Color Board could not be activated. Please make sure a single clip in the timeline is selected and try again.",
         "colorBoardNextPane": "Color Board: Next Pane",
         "colorBoardPreviousPane": "Color Board: Previous Pane",
+        "motionTemplates": "Motion Templates",
         "colorBoardShowColor": "Color Board: Show Color",
         "colorBoardShowExposure": "Color Board: Show Exposure",
         "colorBoardShowSaturation": "Color Board: Show Saturation",
@@ -1490,7 +1492,7 @@
         "plugin_status_loaded": "Loaded",
         "pluginAction": "Action",
         "pluginCache": "Plugin Cache",
-        "pluginCacheDescription": "This is the plugin cache used by CommandPost's Search Console.",
+        "pluginCacheDescription": "CommandPost keeps a list of all the installed Final Cut Pro Motion Templates, so that it can display them in the Search Console.<br /><br />If an effect, transition, title or generator is missing from the Search Console, you can re-scan your system for new Motion Templates.",
         "pluginCategory": "Category",
         "pluginName": "Plugin Name",
         "pluginRequired": "Required",
