--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -234,7 +234,7 @@
         "clearPluginCache": "Clear Plugin Cache",
         "scanMotionTemplates": "Scan Motion Templates",
         "clearSharedPasteboard": "Clear Shared Pasteboard",
-        "cliInstallError": "I'm sorry, but we failed to Install the Command Line Tool. Please try again.",
+        "cliInstallError": "I'm sorry, but CommandPost failed to Install the Command Line Tool. Please try again.",
         "clip": "Clip",
         "clipFiltering": "Clip Filtering",
         "clipHeight": "Clip Height",
@@ -242,7 +242,7 @@
         "clipRoles": "Clip Roles",
         "clipWaveformHeight": "Clip Waveform Height",
         "clipWaveformHeight9": "WaveformH",
-        "cliUninstallError": "I'm sorry, but we failed to Uninstall the Command Line Tool. Please try again.",
+        "cliUninstallError": "I'm sorry, but CommandPost failed to Uninstall the Command Line Tool. Please try again.",
         "close": "Close",
         "cmdDoesNotExistError": "No command with the ID of %{id} could be found.",
         "cmdGroupNotActivated": "Unable to activate the '%{id}' command group.",
@@ -1345,7 +1345,7 @@
         "noKeyboardShortcutsInKeywordEditor": "There doesn't appear to be any Keyword Shortcuts allocated in the Keyword Editor.",
         "noKeywordPresetsError": "It doesn't look like you've saved anything to this keyword preset yet?",
         "noMatchesFound": "No matches found.",
-        "noMatchesFoundDescription": "We couldn't find any matches for the string you searched for. Please make sure all the rows you want to search are visible in the browser.",
+        "noMatchesFoundDescription": "CommandPost couldn't find any matches for the string you searched for. Please make sure all the rows you want to search are visible in the browser.",
         "none": "None",
         "noPluginFound": "Unable to find a ${plugin} called '${name}'.",
         "noPluginShortcut": "There is no ${plugin} assigned to this shortcut.\n\nYou can assign Shortcuts via the CommandPost menu bar.",
@@ -1655,7 +1655,7 @@
         "saveFormatAttributes": "Save Format Attributes",
         "saveTimelineIndexToCSV": "Save Timeline Index to CSV",
         "scale": "Scale",
-        "scanAfterEffectsDescription": "We will now scan After Effects to generate a list of installed plugins.",
+        "scanAfterEffectsDescription": "CommandPost will now scan After Effects to generate a list of installed plugins.",
         "scanAfterEffectsDescriptionTwo": "This process requires After Effects to be open, and can take several minutes.",
         "scanFinalCutPro": "Scan Final Cut Pro",
         "scanFinalCutProSetupOne": "CommandPost needs to scan your system for Final Cut Pro Plugins & Motion Templates.",
@@ -1674,7 +1674,7 @@
         "sCurve": "S-Curve",
         "search": "Search",
         "searchAborted": "The search has been aborted.",
-        "searchAbortedDescription": "The search failed to find anything after searching 500 cells, so we've aborted it.\n\nYou can try using a Smart Collection or use the 'Filter Browser Before Search' option in the HUD Search Panel to narrow your selection in the Browser.",
+        "searchAbortedDescription": "The search failed to find anything after searching 500 cells, so it has been aborted.\n\nYou can try using a Smart Collection or use the 'Filter Browser Before Search' option in the HUD Search Panel to narrow your selection in the Browser.",
         "searchEntireLibrary": "Search Entire Library",
         "searchIn": "Search in",
         "searchSubtext": "Search Subtext",
