--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -232,7 +232,6 @@
         "clearLog": "Clear Log",
         "clearPasteboardHistory": "Clear Pasteboard History",
         "clearPluginCache": "Clear Plugin Cache",
-        "scanMotionTemplates": "Scan Motion Templates",
         "clearSharedPasteboard": "Clear Shared Pasteboard",
         "cliInstallError": "I'm sorry, but CommandPost failed to Install the Command Line Tool. Please try again.",
         "clip": "Clip",
@@ -257,7 +256,6 @@
         "colorBoardCouldNotBeActivated": "The Color Board could not be activated. Please make sure a single clip in the timeline is selected and try again.",
         "colorBoardNextPane": "Color Board: Next Pane",
         "colorBoardPreviousPane": "Color Board: Previous Pane",
-        "motionTemplates": "Motion Templates",
         "colorBoardShowColor": "Color Board: Show Color",
         "colorBoardShowExposure": "Color Board: Show Exposure",
         "colorBoardShowSaturation": "Color Board: Show Saturation",
@@ -1307,6 +1305,7 @@
         "monogram": "Monogram",
         "motion_application_manager_label": "Application Manager",
         "motion_feedback_bugreport_label": "Help & Support: Report Bug to Apple",
+        "motionTemplates": "Motion Templates",
         "mountExternalDrives_title": "Mount External Drives",
         "mountingExternalDrivesMsg": "Mounting external drives...",
         "mouseLocation": "Centre of Mouse Location",
@@ -1616,8 +1615,11 @@
         "resetWheel": "Reset Wheel",
         "resetWheelSaturationAndBrightness": "Reset Wheel, Saturation & Brightness",
         "resolve_application_manager_label": "Application Manager",
+        "resolve_command_group": "DaVinci Resolve",
         "resolve_group": "DaVinci Resolve",
         "resolve_manager_label": "Resolve Manager",
+        "resolve_tangent_emulation_label": "Emulation",
+        "resolve_tangentemulation_action": "Emulation",
         "restart": "Restart",
         "restartCommandPostNow": "Would you like to restart CP now?",
         "restore": "Restore",
@@ -1660,6 +1662,7 @@
         "scanFinalCutPro": "Scan Final Cut Pro",
         "scanFinalCutProSetupOne": "CommandPost needs to scan your system for Final Cut Pro Plugins & Motion Templates.",
         "scanFinalCutProSetupTwo": "Depending on how many plugins and effects you have installed, this can take several minutes.",
+        "scanMotionTemplates": "Scan Motion Templates",
         "scanningInProgress": "Scanning in progress",
         "screen": "Screen",
         "screen9": "Screen",
@@ -1886,6 +1889,7 @@
         "systempreferences_application_manager_label": "Application Manager",
         "tag": "Tag",
         "tangent": "Tangent",
+        "tangentActionDescription": "Emulates a Tangent Element button, knob or wheel. At least one physical Tangent panel must be connected.",
         "tangentFavouriteDescription": "You can assign any action in CommandPost to a Favourite below, which is then accessible in the Tangent Mapper.",
         "tangentFinalCutProShortcutFailed": "There is no shortcut key applied to this command, so the command cannot be triggered.\n\nPlease open up the Final Cut Pro Command Editor and assign a shortcut key to the command, then try again.",
         "tangentMapperNotFound": "Tangent Mapper Not Found",
