Work in progress
- Added ability to remove Custom Applications from Tangent Preferences

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -670,6 +670,7 @@
         "dropShadow": "Drop Shadow",
         "dualDisplays": "Dual Displays",
         "dull": "Dull",
+        "duplicateCustomApplication": "There is already a Custom Application with the same name.",
         "duration": "Duration",
         "ease": "Ease",
         "edit": "Edit",
@@ -745,7 +746,7 @@
         "face": "Face",
         "fadeInType": "Fade In Type",
         "fadeOutType": "Fade Out Type",
-        "failedToAddCustomApplication": "Failed to add Custom Application",
+        "failedToAddCustomApplication": "Failed to add Custom Application.",
         "failedToAddCustomApplicationDescription": "CommandPost was unable to determine the bundle identifier or display name for the custom application.\n\nPlease provide feedback to the CommandPost team so that they can come up with a fix.",
         "failedToChangeLanguage": "Unable to change Final Cut Pro's language.",
         "failedToProcessTheCSVFile": "Failed to process the CSV file.",
@@ -1578,6 +1579,7 @@
         "releaseActionUpModifier": "Release Action (Up Modifier)",
         "reload": "Reload",
         "rememberLastQuery": "Remember Last Query",
+        "removeApplication": "Remove Application",
         "removeFavouriteKeyword": "Remove Favourite Keyword",
         "removeLineBreaks": "Remove line breaks",
         "renameButton": "Rename Button",
