Work in progress
- Now storing the Tangent Mapper user maps in the CommandPost
Application Support folder rather than in it’s default Tangent location
so that all the CommandPost related preferences are in the same spot.

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -645,6 +645,7 @@
         "disableLoupedeckPlusSupportAndLaunchLoupedeckApp": "Disable Loupedeck+ Support & Launch Loupedeck App",
         "disableLoupedeckSupport": "Disable Loupedeck Support",
         "disableLoupedeckSupportAndLaunchLoupedeckApp": "Disable Loupedeck Support & Launch Loupedeck App",
+        "disableTangentPanelSupport": "Disable Tangent Panel Support",
         "disableTourBoxAndLaunchTourBoxConsole": "Disable TourBox Support & Launch TourBox Console",
         "disableTourBoxSupport": "Disable TourBox Support",
         "diskutility_application_manager_label": "Application Manager",
@@ -1949,6 +1950,7 @@
         "toggleEffects": "Toggle Effects",
         "toggleOverlaysWithCapsLock": "Toggle Overlays with Caps Lock",
         "togglePlayerBackground": "Toggle Player Background",
+        "toggleTangentPanelSupport": "Toggle Tangent Panel Support",
         "toggleTourBoxSupport": "Toggle TourBox Support",
         "toggleVideoScopesInEventViewer": "Toggle Video Scopes in Event Viewer",
         "toggleVideoScopesInViewer": "Toggle Video Scopes in Viewer",
