Work in progress
- The Loupedeck CT Manager now support multiple devices.

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -98,6 +98,8 @@
         "areYouSureTheXMLIsValid": "Are you sure the XML is valid?",
         "areYouSureYouWantToStoreYourSettingsOnTheLoupedeckCTFlashDrive": "Are you sure you want to store your settings on the Loupedeck CT Flash Drive?",
         "areYouSureYouWantToStoreYourSettingsOnTheLoupedeckCTFlashDriveDescription": "Enabling this option will tell CommandPost to read and write the settings to and from the connected Loupedeck CT's internal Flash Drive.\n\nIf your Loupedeck CT has settings already stored on it, those settings will overwrite whatever is locally stored on your Mac. However, for safety, before they're overwritten they will be backed up with today's date and time in CommandPost's Settings Folder.\n\nIf there are no existing settings on the Loupedeck CT Flash Drive, then the settings from the Mac will be copied to the Loupedeck CT.",
+        "areYouSureYouWantToStoreYourSettingsOnTheLoupedeckLiveFlashDrive": "Are you sure you want to store your settings on the Loupedeck Live Flash Drive?",
+        "areYouSureYouWantToStoreYourSettingsOnTheLoupedeckLiveFlashDriveDescription": "Enabling this option will tell CommandPost to read and write the settings to and from the connected Loupedeck Live's internal Flash Drive.\n\nIf your Loupedeck Live has settings already stored on it, those settings will overwrite whatever is locally stored on your Mac. However, for safety, before they're overwritten they will be backed up with today's date and time in CommandPost's Settings Folder.\n\nIf there are no existing settings on the Loupedeck Live Flash Drive, then the settings from the Mac will be copied to the Loupedeck Live.",
         "assignAction": "Assign Action",
         "assignClipAudioRoleToVoiceName": "Assign Clip Audio Role to Voice Name",
         "atLeastOneBrowserClipMustBeSelected": "At least one clip must be selected in the browser to use this feature.",
@@ -641,6 +643,8 @@
         "disabled": "Disabled",
         "disableLoupedeckCTSupport": "Disable Loupedeck CT Support",
         "disableLoupedeckCTSupportAndLaunchLoupedeckApp": "Disable Loupedeck CT Support & Launch Loupedeck App",
+        "disableLoupedeckLiveSupport": "Disable Loupedeck Live Support",
+        "disableLoupedeckLiveSupportAndLaunchLoupedeckApp": "Disable Loupedeck Live Support & Launch Loupedeck App",
         "disableLoupedeckPlusSupport": "Disable Loupedeck+ Support",
         "disableLoupedeckPlusSupportAndLaunchLoupedeckApp": "Disable Loupedeck+ Support & Launch Loupedeck App",
         "disableLoupedeckSupport": "Disable Loupedeck Support",
@@ -701,6 +705,8 @@
         "enableLoupdeckSupport": "Enable Loupedeck Support",
         "enableLoupedeckCTSupport": "Enable Loupedeck CT Support",
         "enableLoupedeckCTSupportQuitLoupedeckApp": "Enable Loupedeck CT Support & Quit Loupedeck App",
+        "enableLoupedeckLiveSupport": "Enable Loupedeck Live Support",
+        "enableLoupedeckLiveSupportQuitLoupedeckApp": "Enable Loupedeck Live Support & Quit Loupedeck App",
         "enableLoupedeckPlusSupport": "Enable Loupedeck+ Support",
         "enableLoupedeckPlusSupportQuitLoupedeckApp": "Enable Loupedeck+ Support & Quit Loupedeck App",
         "enableLoupedeckSupportQuitLoupedeckApp": "Enable Loupedeck Support & Quit Loupedeck App",
@@ -1036,6 +1042,7 @@
         "global_loupedeckbanks_action": "Loupedeck+ Banks",
         "global_loupedeckct_banks_action": "Loupedeck CT Banks",
         "global_loupedeckctapplications_action": "Loupedeck CT Applications",
+        "global_loupedecklive_banks_action": "Loupedeck Live Banks",
         "global_menuactions_action": "Active Application Menu Items",
         "global_midibanks_action": "MIDI Banks",
         "global_pasteboard_action": "Text Pasteboard History",
@@ -1243,6 +1250,13 @@
         "loupedeckCTResetBankConfirmation": "This will reset all Loupedeck CT items in the current bank to the default values.",
         "loupedeckCTStoreSettingsOnFlashDriveLineOne": "<strong>Store settings on Flash Drive</strong> is enabled, but no Loupedeck CT is detected.",
         "loupedeckCTStoreSettingsOnFlashDriveLineTwo": "Please connect your Loupedeck CT to allow configuration.",
+        "loupedeckLive": "Loupedeck Live",
+        "loupedeckLiveBankDescription": "Changes the Loupedeck Live Bank",
+        "loupedeckLiveResetAllConfirmation": "This will reset all Loupedeck Live items across all applications to the default values.",
+        "loupedeckLiveResetApplicationConfirmation": "This will reset all Loupedeck Live items in the current application to the default values.",
+        "loupedeckLiveResetBankConfirmation": "This will reset all Loupedeck Live items in the current bank to the default values.",
+        "loupedeckLiveStoreSettingsOnFlashDriveLineOne": "<strong>Store settings on Flash Drive</strong> is enabled, but no Loupedeck Live is detected.",
+        "loupedeckLiveStoreSettingsOnFlashDriveLineTwo": "Please connect your Loupedeck Live to allow configuration.",
         "loupedeckPlus": "Loupedeck+",
         "loupedeckPlusBankDescription": "Changes the Loupedeck+ Bank",
         "loupedeckResetAllConfirmation": "This will reset all Loupedeck+ items across all applications to the default values.",
