Added missing i18n values

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1470,6 +1470,7 @@
         "playToEnd": "Play to End",
         "pleaseCheckTheContentsOfTheCSVFileAndTryAgain": "Please check the contents of the CSV file and try again.",
         "pleaseDisconnectAndReconnectYourLoupedeckCT": "Please disconnect and reconnect your Loupedeck CT.",
+        "pleaseDisconnectAndReconnectYourLoupedeckLive": "Please disconnect and reconnect your Loupedeck Live.",
         "pleaseEnterAPrefix": "Please enter a prefix",
         "pleaseLoadAValidCSVFileAndTryAgain": "Please load a valid CSV file and try again.",
         "pleaseLoadAValidFCPXMLTemplateAndTryAgain": "Please load a valid FCPXML Template and try again.",
@@ -1907,6 +1908,7 @@
         "switchBetweenInsideOutsideMarks": "Switch Between Inside/Outside Masks",
         "switchingTo": "Switching to",
         "switchLoupedeckCTTo": "Switch Loupedeck CT to",
+        "switchLoupedeckLiveTo": "Switch Loupedeck Live  to",
         "switchTourBoxTo": "Switch TourBox to",
         "systempreferences_application_manager_label": "Application Manager",
         "tag": "Tag",
