Work in progress
- Updated the Loupedeck Preferences panel to support the Loupedeck Live.
- Fixed a bug in the Loupedeck Preferences panel code that could cause
issues with drag and drop if you only ticked “Repeat Press Action Until
Released” without applying an action.
- Updated the Menu Action plugin to support the Loupedeck Live.
- Moved the code into a seperate `core.loupedeckctandlive` plugin to
keep things clean and tidy.
- Moved the `plugins.core.loupedeckct.changeapplications` plugin code
into the shared `core.loupedeckctandlive.manager` plugin.
- Removed some unnecessary debugging messages.

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1959,6 +1959,7 @@
         "title": "Title",
         "title_group": "Title",
         "toEnableTheFlashDriveOnLoupedeckCT": "To enable the Flash drive you need to restart your device by disconnecting it from your computer and reconnecting it.",
+        "toEnableTheFlashDriveOnLoupedeckLive": "To enable the Flash drive you need to restart your device by disconnecting it from your computer and reconnecting it.",
         "toggle": "Toggle",
         "toggleAutomaticScriptReloading": "Auto Reload",
         "toggleColorCorrectionEffects": "Toggle Color Correction Effects",
