Work in progress
- Added missing i18n values
- Realised that the Loupedeck Live doesn’t have a built-in Flash Drive

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -42,6 +42,7 @@
         "aftereffects_preferences_label": "Preferences",
         "aftereffects_shortcuts_action": "Shortcuts",
         "aftereffects_shortcuts_label": "Shortcuts",
+        "aftereffects_tangent_manager_label": "Tangent Manager",
         "afterEffectsShortcutDescription": "Triggers a shortcut key within After Effects.",
         "afterPrefix": "After Prefix",
         "afterSuffix": "After Suffix",
@@ -341,8 +342,8 @@
         "core_language_label": "Language Module",
         "core_loupedeck_prefs_label": "Preferences: Loupedeck",
         "core_loupedeckct_changeapplications_label": "Loupedeck CT Applications",
-        "core_loupedeckct_manager_label": "Loupedeck CT Manager",
-        "core_loupedeckct_prefs_label": "Preferences: Loupedeck CT",
+        "core_loupedeckctandlive_manager_label": "Loupedeck CT & Live Manager",
+        "core_loupedeckctandlive_prefs_label": "Preferences: Loupedeck CT & Live",
         "core_loupedeckplus_banks_label": "Loupedeck+: Banks",
         "core_loupedeckplus_prefs_label": "Preferences: Loupedeck+",
         "core_menu_bottom_label": "Menubar: Bottom Section",
@@ -678,6 +679,7 @@
         "duplicateCustomApplication": "There is already a Custom Application with the same name.",
         "duration": "Duration",
         "ease": "Ease",
+        "ecammlive_application_manager_label": "Application Manager",
         "edit": "Edit",
         "effect": "Effect",
         "effects": "Effects",
@@ -1043,6 +1045,7 @@
         "global_loupedeckct_banks_action": "Loupedeck CT Banks",
         "global_loupedeckctapplications_action": "Loupedeck CT Applications",
         "global_loupedecklive_banks_action": "Loupedeck Live Banks",
+        "global_loupedeckliveapplications_action": "Loupedeck Live Applications",
         "global_menuactions_action": "Active Application Menu Items",
         "global_midibanks_action": "MIDI Banks",
         "global_pasteboard_action": "Text Pasteboard History",
@@ -1495,6 +1498,7 @@
         "plugin_group_compressor": "Compressor",
         "plugin_group_core": "Core",
         "plugin_group_diskutility": "Disk Utility",
+        "plugin_group_ecammlive": "Ecamm Live",
         "plugin_group_finalcutpro": "Final Cut Pro",
         "plugin_group_finder": "Finder",
         "plugin_group_microsoftteams": "Microsoft Teams",
@@ -1641,6 +1645,7 @@
         "resolve_group": "DaVinci Resolve",
         "resolve_manager_label": "Resolve Manager",
         "resolve_tangent_emulation_label": "Emulation",
+        "resolve_tangent_manager_label": "Tangent Manager",
         "resolve_tangentemulation_action": "Emulation",
         "restart": "Restart",
         "restartCommandPostNow": "Would you like to restart CP now?",
