--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -668,6 +668,7 @@
         "doubleTap": "Double Tap",
         "down": "Down",
         "downloadAudioSwift": "Download AudioSwift",
+        "downloadMonogramCreator": "Download Monogram Creator",
         "downloadTangentHub": "Download Tangent Hub",
         "doYouWantToContinue": "Do you want to continue?",
         "draggable": "Draggable",
@@ -714,6 +715,7 @@
         "enableLoupedeckSupportQuitLoupedeckApp": "Enable Loupedeck Support & Quit Loupedeck App",
         "enableLuaCodeProcessing": "Enable Lua Code Processing",
         "enableMIDI": "Enable MIDI Support",
+        "enableMonogramSupport": "Enable Monogram Support",
         "enablePasteboardHistory": "Enable Pasteboard History",
         "enableProwlNotifications": "Enable Prowl Notifications",
         "enablePushoverNotifications": "Enable Pushover Notifications",
@@ -1326,6 +1328,8 @@
         "modifyProject": "Modify Project",
         "monitor": "Monitor",
         "monogram": "Monogram",
+        "monogramFavouriteDescription": "You can assign any action in CommandPost to a Favourite below, which is then accessible in the Monogram Creator.",
+        "monogramSupport": "Monogram Support",
         "motion_application_manager_label": "Application Manager",
         "motion_feedback_bugreport_label": "Help & Support: Report Bug to Apple",
         "motionTemplates": "Motion Templates",
@@ -1410,6 +1414,7 @@
         "openFavouriteFolder": "Open Favourite Folder",
         "openKeyCreator": "Open Key Creator",
         "openMessages": "Open Messages",
+        "openMonogramCreator": "Open Monogram Creator",
         "openPrivacyPolicy": "Open Privacy Policy",
         "openProjectAfterFind": "Open Project After Find",
         "openRecentProjectStartingWith": "Open Recent Project Starting With",
