Added Shot Data Toolbox
- Threw together a Shot Data Toolbox for Vigneswaran Rajkumar.
- Currently a work-in-progress.
- Added FCPXML v1.9 DTD.
- Will eventually close #2424

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1828,6 +1828,7 @@
         "shortcutsPanelTooltip": "Keyboard Shortcuts",
         "shortcutsResetConfirmation": "This will reset all modified shortcuts to the default values.",
         "shortcutsSetNoneConfirmation": "This will reset all of the shortcuts to None.",
+        "shotData": "Shot Data",
         "show": "Show",
         "showActionGroups": "Show Action Groups",
         "showAll": "Show All",
